# givre

./: .gitignore  Cargo.toml  Makefile  README.md  katex-header.html
.github/workflows/: publish.yml  readme.yml  rust.yml
givre/: Cargo.toml
givre/src/: ciphersuite.rs  lib.rs  signing.rs
givre/src/ciphersuite/: bitcoin.rs  ed25519.rs  secp256k1.rs
givre/src/signing/: aggregate.rs  full_signing.rs  round1.rs  round2.rs  taproot.rs  utils.rs
tests/: Cargo.toml
tests/src/: lib.rs
tests/tests/it/: interactive.rs  main.rs  test_vectors.rs
wasm/no_std/: Cargo.toml
wasm/no_std/src/: lib.rs
