[workspace]
resolver = "2"
members = [
  "givre",
  "tests",
]

exclude = [
  "wasm/no_std",
]

[patch.crates-io.generic-ec]
git = "https://github.com/dfns/generic-ec"
branch = "faster-multiscalar"

[patch.crates-io.generic-ec-curves]
git = "https://github.com/dfns/generic-ec"
branch = "faster-multiscalar"
