[package]
name = "givre"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cggmp21-keygen = { version = "0.4", default-features = false, optional = true }
key-share = { version = "0.5", default-features = false }

generic-ec = { version = "0.4", default-features = false, features = ["alloc"] }

rand_core = { version = "0.6", default-features = false }
digest = { version = "0.10", default-features = false }

round-based = { version = "0.3", default-features = false, features = ["derive"], optional = true }

k256 = { version = "0.13", default-features = false, features = ["hash2curve"], optional = true }
static_assertions = { version = "1.1", optional = true }
sha2 = { version = "0.10", default-features = false, optional = true }

serde = { version = "1", default-features = false, features = ["derive"], optional = true }

hd-wallet = { version = "0.5", git = "https://github.com/LFDT-Lockness/slip-10", branch = "eddsa-support", default-features = false, optional = true }

[dev-dependencies]
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
futures = "0.3"

[features]
default = ["std"]

std = [
  "key-share/std",
  "cggmp21-keygen?/std",
  "round-based?/std",
  "serde?/std",
  "hd-wallet?/std"
]

cggmp21-keygen = ["dep:cggmp21-keygen"]
full-signing = ["round-based"]

serde = ["dep:serde", "key-share/serde"]

spof = ["key-share/spof"]

hd-wallet = ["dep:hd-wallet", "key-share/hd-wallet", "cggmp21-keygen?/hd-wallet"]
taproot = ["sha2"]

all-ciphersuites = ["ciphersuite-secp256k1", "ciphersuite-ed25519", "ciphersuite-bitcoin"]
ciphersuite-secp256k1 = ["generic-ec/curve-secp256k1", "k256", "sha2", "static_assertions"]
ciphersuite-ed25519 = ["generic-ec/curve-ed25519", "sha2"]
ciphersuite-bitcoin = ["ciphersuite-secp256k1", "taproot"]

