[package]
name = "givre-compiles-in-nostd-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.givre]
path = "../../givre"
default-features = false
features = [
  "all-ciphersuites",
  "spof",
  "serde",
  "cggmp21-keygen",
  "full-signing",
  "hd-wallet",
  "taproot",
]

[patch.crates-io.key-share]
git = "https://github.com/LFDT-Lockness/cggmp21"
branch = "update-hd-wallet"

[patch.crates-io.cggmp21-keygen]
git = "https://github.com/LFDT-Lockness/cggmp21"
branch = "update-hd-wallet"
